Fixed overflowing event label

--- a/public/stylesheets/styles.less
+++ b/public/stylesheets/styles.less
@@ -7,6 +7,7 @@
 	}
 	a {
 		padding-left: 0px !important;
+		width: 60%;
 	}
 }
 
